# mp4_player

./: .gitignore  AudioPlayer.cpp  AudioPlayer.h  CMakeLists.txt  README.md  VideoFrameQueue.cpp  VideoFrameQueue.h  VideoPlayer.h  main.cpp  main.h  player.sln  player.vcxproj  player.vcxproj.filters  videoPlayer.cpp
Debug/: player.ilk  vc142.idb
Debug/player.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  player.lastbuildstate
x64/Debug/: vc142.idb
x64/Debug/player.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  player.lastbuildstate
